--- a/cheat-sheet.html
+++ b/cheat-sheet.html
@@ -1,1 +1,87 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cheat Sheet</title>
+  </head>
+  <body>
+    <section>
+      <h3>Basic Git Commands</h3>
+      <p>
+        <strong>Setting Up:</strong><br />
+        git init: Initializes a new Git repository in a directory. This is the
+        first command you'll use to start version control for a project. git
+        config: Sets configuration options for Git, such as your username and
+        email. This is important for identifying your commits.
+        <br />
+        <strong>Working with Changes:</strong> <br />git add: Stages changes for
+        commit. You can add specific files or all changes in a directory. git
+        commit: Saves the staged changes with a descriptive message. This
+        creates a new version in your project's history. git status: Shows the
+        current state of your repository, including which files have been
+        modified or staged. git diff: Displays the differences between your
+        working directory and the staged changes, or between different commits.
+        <br /><strong>Branching and Merging:</strong><br />git branch: Lists,
+        creates, or deletes branches. Branches allow you to work on different
+        features or bug fixes in isolation. git checkout: Switches to a
+        different branch. git merge: Combines changes from one branch into
+        another. <br /><strong>Remote Repositories: </strong><br />git clone:
+        Creates a copy of a remote repository on your local machine. git push:
+        Uploads local commits to a remote repository. git pull: Downloads
+        changes from a remote repository and merges them into your current
+        branch.<br />
+        <strong>Viewing History: </strong><br />git log: Shows the commit
+        history of your project. You can customize the output to see different
+        levels of detail.
+      </p>
+    </section>
+    <section>
+      <h3>Basic Bash Commands</h3>
+      <p>
+        <strong>Navigation and File Management</strong><br />
 
+        ls: Lists the files and directories in the current directory. You can
+        use options like -l (long listing), -a (show hidden files), and -h
+        (human-readable file sizes) to customize the output. <br />
+        cd: Changes the current directory. You can specify the path to the
+        directory you want to move to.<br />
+        pwd: Prints the current working directory. <br />
+        mkdir: Creates a new directory.<br />
+        rmdir: Removes an empty directory.<br />
+        rm: Removes files or directories. Use with caution, as this command is
+        irreversible! Options include -r (recursive for directories) and -f
+        (force). cp: Copies files or directories.<br />
+        mv: Moves or renames files or directories.<br />
+        touch: Creates an empty file or updates the timestamp of an existing
+        file. <br />
+        <strong>Viewing and Editing Files</strong><br />
+
+        cat: Displays the contents of a file. less: Views the contents of a file
+        one page at a time, allowing you to navigate through the file.<br />
+        head: Displays the first few lines of a file.<br />
+        tail: Displays the last few lines of a file.<br />
+        echo: Prints text to the terminal.<br />
+        vi or nano: Text editors for creating and editing files. <br />
+        <strong>Searching and Filtering</strong><br />
+
+        grep: Searches for patterns in files.<br />
+        find: Searches for files based on various criteria.<br />
+        <strong>System Information</strong>
+
+        df: Displays disk space usage.<br />
+        du: Displays file and directory space usage.<br />
+        ps: Lists running processes.<br />
+        top: Displays real-time system information, including CPU and memory
+        usage.<br />
+        uname: Displays system information.<br />
+        <strong> Other Useful Commands </strong>
+
+        history: Displays a list of previously used commands.<br />
+        clear: Clears the terminal screen.<br />
+        man: Displays the manual page for a command.<br />
+        sudo: Executes a command with superuser privileges<br />.
+      </p>
+    </section>
+  </body>
+</html>
