--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <title>home</title>
   </head>
   <body>
-    <a
-      href="C:\Users\jberr\Desktop\Codex Projects\Week 1 Assignment 5\week-1-assignment-5\cheat-sheet.html"
-      >Check Out My Cheat Sheet.</a
-    >
+    <a href="cheat-sheet.html">Check Out My Cheat Sheet.</a>
   </body>
 </html>
